--- a/create-application.yaml
+++ b/create-application.yaml
@@ -1,6 +1,7 @@
 apiVersion: project.openshift.io/v1
 description: "teste"
 displayName: teste
+namespace: teste
 kind: ProjectRequest
 metadata:
     name: teste
